--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-chartjs-2": "^5.3.0",
     "react-confetti": "^6.2.2",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.1"
+    "react-router-dom": "^6.28.1",
+    "react-vertical-timeline-component": "^3.5.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
